<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">
    <item
        android:id="@+id/action_update_usuario"
        android:orderInCategory="100"
        android:title="@string/action_update_usuario"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_criar_vistoria"
        android:orderInCategory="101"
        android:title="@string/action_criar_vistoria"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_listar_vistorias"
        android:orderInCategory="102"
        android:title="@string/action_listar_vistorias"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sobre"
        android:orderInCategory="103"
        android:title="@string/action_sobre"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sair"
        android:orderInCategory="104"
        android:title="@string/action_sair"
        app:showAsAction="never" />
</menu>